Fix cut off dropdown menu on mobile

--- a/src/Ombi/ClientApp/styles/base.scss
+++ b/src/Ombi/ClientApp/styles/base.scss
@@ -886,6 +886,7 @@ textarea {
 
 .ui-treetable tbody td {
     white-space: inherit;
+    overflow: visible;
 }
 
 table a:not(.btn) {
